# Zodiac

./: .#moc_ddwin.cpp.1.5  .#moc_ddwin.cpp.1.7  .#moc_menu.cpp.1.5  .#moc_menu.cpp.1.7  .#moc_plants.cpp.1.5  .#moc_plants.cpp.1.7  .#moc_plants_mainwin.cpp.1.5  .#moc_plants_mainwin.cpp.1.7  .#moc_thread.cpp.1.5  .#moc_thread.cpp.1.7  .cvsignore  .gitignore  FF.cc  FF.h  INSTALL.txt  Info.plist  LookUpTable.h  MMFF.cc  MMFF.h  Makefile  Makefile.Debug  Makefile.Release  Makefile_old  MarchingCubes.cc  MarchingCubes.h  PLP.cc  PLP.h  ZNdata.cc  ZNdata.h  ZNmolecule.cc  Zodiac.cc  Zodiac.pro  Zodiac_0.4_beta.pro  actions.cc  actions.h  arcball.cc  arcball.h  builder.cc  builder.h  chemscore.cc  (+59 more)
Zodiac-release-26:2:07.xcodeproj/: project.pbxproj  qt_makeqmake.mak  qt_preprocess.mak
Zodiac-win32-vc2005/: .cvsignore  Zodiac-win32-vc2005.sln  Zodiac-win32-vc2005.vcproj
Zodiac-win32-vc2008/: .cvsignore  Zodiac-win32-vc2008.sln  Zodiac-win32-vc2008.vcproj
Zodiac.xcodeproj/: nicola.mode1v3  nicola.pbxuser  nicolazonta.mode1  nicolazonta.pbxuser  project.pbxproj  qt_makeqmake.mak  qt_preprocess.mak
debian/: README  README.Debian  changelog  control  copyright  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  files  init.d.ex  init.d.lsb.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex  zodiac-default.ex  zodiac.doc-base.EX  zodiac.substvars
debian/zodiac/DEBIAN/: control  md5sums
forcefields/: Makefile  Makefile.am  Makefile.in  forcefieldghemical.cpp  forcefieldghemical.h  forcefieldghemical.lo  forcefieldmmff94.cpp  forcefieldmmff94.h  forcefieldmmff94.lo  forcefielduff.cpp  forcefielduff.h  forcefielduff.lo  libforcefields.la
headers/: FF.h  LookUpTable.h  MMFF.h  MarchingCubes.h  PLP.h  ZNdata.h  ZNmolecule.h  actions.h  arcball.h  builder.h  chemscore.h  cmat.h  command.h  constants.h  cutoffGrid.h  database.h  datagrid.h  ddwin.h  function.h  graphical_object.h  ils.h  iodevice.h  maths.h  menu.h  minimize.h  myline.h  nms.h  optimiser.h  plants.h  plants_mainwin.h  plantsconfig.h  ply.h  pso.h  subscrpt.h  thread.h  vec.h  wiimote.h
icons/: zeden.icns
molsketch_helium/: CMakeLists.txt  atom.cpp  atom.h  bond.cpp  bond.h  commands.cpp  commands.h  element.cpp  element.h  fileio.cpp  fileio.h  mainwindow.cpp  mainwindow.h  molecule.cpp  molecule.h  mollibitem.cpp  mollibitem.h  molsKetch.nsi  molscene.cpp  molscene.h  molsketch.desktop  molsketch.qrc  molview.cpp  molview.h  periodictablewidget.cpp  periodictablewidget.h  settings.cpp  settings.h  settings.ui
molsketch_helium/i18n/: CMakeLists.txt  molsketch_cs.ts  molsketch_nl.ts  molsketch_pt_BR.ts
molsketch_helium/images/: molsketch.xpm
molsketch_helium/part/: CMakeLists.txt  molsketch_factory.cpp  molsketch_factory.h  molsketch_factory.h~  molsketchpart.cpp  molsketchpart.h  molsketchpart.rc  molsketchpart_shell.cpp  molsketchpart_shell.h  molsketchpart_shell.qrc  molsketchpart_shell.rc
openbabel/: .#forcefield.h.1.2  Makefile  babelconfig-mac.h  babelconfig.h  forcefield.h  generic.h  obutil.h
openbabel/math/: Makefile
parameters/: MMFF93SUP.PAR  MMFFANG.PAR  MMFFAROM.PAR  MMFFBNDK.PAR  MMFFBOND.PAR  MMFFCHG.PAR  MMFFDEF.PAR  MMFFDFSB.PAR  MMFFHDEF.PAR  MMFFOOP.PAR  MMFFPBCI.PAR  MMFFPROP.PAR  MMFFSTBN.PAR  MMFFSYMB.PAR  MMFFTOR.PAR  MMFFVDW.PAR
